[package]
name = "norm"
version = "0.1.0"
edition = "2021"
authors = ["Riccardo Mazzarini <me@noib3.dev>"]

[features]
fzf-v1 = []
fzf-v2 = []

# Private features.
bench = ["tests"]
into-score = []
tests = ["fzf-v1", "fzf-v2"]

[dependencies]
memchr = "2"

[dev-dependencies]
criterion = "0.5"

[[test]]
name = "fzf_v1"
required-features = ["tests"]

[[test]]
name = "fzf_v2"
required-features = ["tests"]

[[bench]]
name = "fzf_common"
harness = false
required-features = ["bench"]

[[bench]]
name = "fzf_v1"
harness = false
required-features = ["bench"]

[[bench]]
name = "fzf_v2"
harness = false
required-features = ["bench"]

[[example]]
name = "cities"
required-features = ["fzf-v2"]
