[package]
name = "norm"
version = "0.1.0"
edition = "2021"
authors = ["Riccardo Mazzarini <me@noib3.dev>"]
description = "A collection of distance metrics on strings"
documentation = "https://docs.rs/norms"
repository = "https://github.com/nomad/norm"
readme = "README.md"
license = "MIT"
keywords = ["text", "fuzzy", "match", "search", "fzf"]
categories = ["algorithms"]
exclude = ["/.github", "/benches", "/examples", "/fuzz", "/tests"]

[package.metadata.docs.rs]
features = ["fzf-v1", "fzf-v2"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
fzf-v1 = ["__any-metric"]
fzf-v2 = ["__any-metric"]

# Private features.
__any-metric = []
__benches = []
__into-score = []
__tests = []

[dependencies]
memchr = "2"

[dev-dependencies]
criterion = "0.5"

[[test]]
name = "fzf_common"
required-features = ["__tests"]

[[test]]
name = "fzf_v1"
required-features = ["__tests"]

[[test]]
name = "fzf_v2"
required-features = ["__tests"]

[[bench]]
name = "fzf_common"
harness = false
required-features = ["__benches"]

[[bench]]
name = "fzf_v1"
harness = false
required-features = ["__benches"]

[[bench]]
name = "fzf_v2"
harness = false
required-features = ["__benches"]

[[example]]
name = "cities"
required-features = ["fzf-v2"]
